--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 </head>
+    <link rel="stylesheet" href="color.css">
 </head>
+</body>
+    <h1> Faith tries coding!</h1>
+<head>
 <body>
-</p>Welcome to my webpage!</p>
+    <h2>Welcome to my webpage!<h2>
+<body>
+    I'm very confused, but that's ok...</h2>
+<body>
+    <h3>:P </h3>
 </body>
 </html>
