--- a/index.html
+++ b/index.html
@@ -13,4 +13,11 @@
 <body>
     <h3>:P </h3>
 </body>
+<h2>Look a GIF! </h2>
+   <img src="https://media.giphy.com/media/3o6UBpHgaXFDNAuttm/giphy.gif">
+<p>
+    <button type="button">This button doesn't work, do not try to click this!</button>  
+<hr>
+<h3>This is what I added:<h3>
+<h3>Changed font, changed color of words, added a gif, added a line separation & added button</h3>
 </html>
