--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h3>:P </h3>
 </body>
-<h2>Look a GIF! </h2>
+<h2>Look, a GIF! (Yes, that is the GIF. You are seeing the right thing.)</h2>
    <img src="https://media.giphy.com/media/3o6UBpHgaXFDNAuttm/giphy.gif">
 <p>
     <button type="button">This button doesn't work, do not try to click this!</button>  
